# Modules/Auth/Http/Requests/ForgotPasswordRequest.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace Modules\Auth\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ForgotPasswordRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'email' => 'required|email|max:255',
+        ];
+    }
+}
