# Modules/Auth/Http/Requests/RefreshRequest.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace Modules\Auth\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class RefreshRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'refresh_token' => 'required|string|size:64',
+        ];
+    }
+}
